🚀 Major cleanup and feature enhancement v0.3-folia
✨ New Features:
- Entity Stacker system with configurable max stacks per chunk
- Enhanced Folia compatibility with region-aware scheduling
- Centralized permission system with wildcard support
- Towny integration with reflection-based soft dependency
- Entity Limiter with preset configurations
- Villager Optimizer for performance improvements

🧹 Cleanup:
- Removed unused AI modules and temporary files
- Cleaned up outdated documentation files
- Removed backup files and build artifacts
- Streamlined project structure

📚 Documentation:
- Comprehensive README.md with setup guides
- Entity Stacker quick-start guide
- Complete changelog with migration information
- Added MIT license

🔧 Technical Improvements:
- Updated to Java 21 and modern Gradle
- Fixed stacking logic for proper overflow handling
- Enhanced permission checks across all commands
- Improved error handling and thread safety

🐛 Bug Fixes:
- Fixed entity stacker reload functionality
- Corrected max stacks per chunk implementation
- Resolved permission inheritance issues
- Fixed Towny integration fallback behavior

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,133 @@
 # All features are enabled by default
 version: 0.2.0
 
+# ======================================
+# PLUGIN PREFIX AND GENERAL SETTINGS
+# ======================================
+
+# Change this to modify the HBZCleaner prefix. NOTE: The showing of the prefix shows professionalism for the technology being used by your server, if you modify it from its default value, it does not.
+prefix: "&6&lHBZCleaner &7&l>>&r "
+
+# Enables/Disables the "HBZCleaner" splash screen when the plugin starts
+splashScreen: true
+
+# This is whether you would like this plugin to automatically check and install new updates. This is highly recommended.
+auto-update: true
+
+# ======================================
+# ENTITY AND ITEM STACKER
+# ======================================
+
+# Entity and Item Stacker Configuration
+stacker:
+  # Enable the stacker system
+  enabled: false
+
+  # Enable debug logging for stacker operations
+  debug: false
+
+  # Maximum stack size for different types
+  max_stack_size:
+    items: 128
+    mobs: 32
+    spawners: 5
+
+  # Maximum number of stacks per entity type in a chunk
+  # Example: max_stacks_per_chunk: 4 means max 4 stacks of blazes per chunk
+  max_stacks_per_chunk: 4
+
+  # Stacking range - how close entities need to be to stack (in blocks)
+  stacking_range: 5.0
+
+  # Stack display format (use %amount% for the number of stacked entities)
+  display_format: "&f[x%amount%] &r"
+
+  # Mob spawner settings
+  spawner:
+    # Enable custom spawner behavior
+    enabled: true
+
+    # How many entities to spawn at once from spawners
+    spawn_count: 2
+
+    # Whether spawner-spawned entities should stack automatically
+    auto_stack: true
+
+  # Whitelist of stackable entity types (any not listed won't stack)
+  # Only whitelisted entities should stack. By default, nothing stacks.
+  # To enable blaze stacking, change enabled to true and add entities like this:
+  # stackable_entities:
+  #   - BLAZE
+  stackable_entities: []
+
+  # Whitelist of stackable item types (any not listed won't stack)
+  # Default: empty (no items stack). Add materials if desired.
+  stackable_items: []
+
+# ======================================
+# AUTOMATIC CLEANUP SETTINGS
+# ======================================
+
+# Schedule automatic cleanup tasks to run periodically
+# This automatically removes items, entities, etc. after a certain period of time
+auto-lag-removal:
+  # Set to true to enable automatic cleanup tasks
+  run: true
+
+  # How often to run the cleanup tasks (in minutes)
+  every: 10
+
+# These are the protocols are run by the automatic cleanup scheduler when enabled above
+# Format: protocol_name: '{"Parameter1":"value1", "Parameter2": "value2"}'
+lag_protocols:
+  # Protocols to run when server memory is low
+  low_ram:
+    cc_items: '{"Delay":"true", "Count": "false"}'
+
+  # Protocols to run when server TPS is low
+  low_tps:
+    cc_entities: '{"Delay":"true", "Count": "false", "ToClear":"null", "World":"%all%"}'
+
+  # Protocols to run on a schedule (based on auto-lag-removal settings)
+  periodically:
+    cc_items: '{"Delay":"true", "Count": "false"}'
+
+# The warning messages shown before cleanup tasks run
+protocol_warnings:
+  cc_items:
+    # How many seconds before the cleanup to show warnings
+    time: 60
+    stages:
+      - "60:%PREFIX%&eClearing ground items in &b60 &eseconds"
+      - "30:%PREFIX%&eClearing ground items in &b30 &eseconds"
+      - "5:%PREFIX%&eClearing ground items in &b5 &eseconds"
+      - "f:%PREFIX%&eAll items on the ground have been cleared."
+  cc_entities:
+    time: 60
+    stages:
+      - "60:%PREFIX%&eClearing hostile entities in &b60 &eseconds"
+      - "30:%PREFIX%&eClearing hostile entities in &b30 &eseconds"
+      - "5:%PREFIX%&eClearing hostile entities in &b5 &eseconds"
+      - "f:%PREFIX%&eAll hostile entities have been cleared."
+
+# ======================================
+# CHUNK MANAGEMENT
+# ======================================
+
+# Automatically removes loaded chunks in worlds that have no players every 10 seconds. (9)
+autoChunk: true
+
+# Removes spawn chunks for all worlds in your server. (10)
+noSpawnChunks: true
+
+# This is a list of worlds that will not be automatically saved by the server. This reduces disk usage but can only be used for worlds in which the terrain is not being edited. Add DISABLED to the list to allow all worlds to automatically save. (6)
+nosaveworlds:
+  - DISABLED
+
+# ======================================
+# LAG DETECTION AND PREVENTION
+# ======================================
+
 # HBZCleaner AI Configuration
 ai:
   # Enable the advanced AI prediction system
@@ -27,12 +154,6 @@ ai:
   # Prediction window in minutes
   prediction_window: 5
 
-# Automatically removes loaded chunks in worlds that have no players every 10 seconds. (9)
-autoChunk: true
-
-# Removes spawn chunks for all worlds in your server. (10)
-noSpawnChunks: true
-
 # This determines if the Smart Lag Detection AI is working to keep your server lag free. (10)
 smartlagai: true
 
@@ -46,23 +167,9 @@ TPS: 16.00
 # Smart lag detection. If a player types "lag" or "lagg" in the chat and your server has less than this amount of ram left, the servers lag removal AI will become active. UNIT IN MEGABYTES (10)
 RAM: 100
 
-# These are the protocols are run by the LaggRemover AI when your server is detected as lagging for one or both of the following reasons. You can list all protocols by typing /lr protocol list
-lag_protocols:
-  low_ram:
-    cc_items: '{"Delay":"true", "Count": "false"}'
-  low_tps:
-    cc_entities: '{"Delay":"true", "Count": "false", "ToClear":"null", "World":"%all%"}'
-  periodically:
-    cc_items: '{"Delay":"true", "Count": "false"}'
-
-# This is a list of worlds that will not be automatically saved by the server. This reduces disk usage but can only be used for worlds in which the terrain is not being edited. Add DISABLED to the list to allow all worlds to automatically save. (6)
-nosaveworlds:
-  - DISABLED
-
-# This automatically removes lag after a certain period of time. The time is in minutes.
-auto-lag-removal:
-  run: false
-  every: 10
+# ======================================
+# ENTITY MANAGEMENT
+# ======================================
 
 # This prevents mobs from spawning in a chunk that contains more than the amount of entities specified in the "thinAt" value. (10 because it can prevent players from creating lag machines)
 thinMobs: true
@@ -133,6 +240,10 @@ entity_limiter:
   chunk_buffer: 5 # Remove entities down to (limit - 5) in chunks
   world_buffer: 50 # Remove entities down to (limit - 50) in worlds
 
+# ======================================
+# VILLAGER OPTIMIZATION
+# ======================================
+
 # Villager AI Optimization
 villager_optimization:
   # Enable villager AI optimizations
@@ -163,7 +274,11 @@ villager_optimization:
   # Villager sleep optimization (disable unnecessary sleep AI)
   optimize_sleep_behavior: true
 
-# Allows the LaggRemover AI (Artificial Inteligence) to perform action to lower the amount of packets being sent to just the player that typed lag. (10)
+# ======================================
+# PLAYER-TRIGGERED LAG MANAGEMENT
+# ======================================
+
+# Allows the HBZCleaner AI (Artificial Intelligence) to perform action to lower the amount of packets being sent to just the player that typed lag. (10)
 doRelativeAction: true
 
 # When enabled, only allows the removal of items for relative lag removal for players.
@@ -172,44 +287,18 @@ doOnlyItemsForRelative: false
 # This prevents non-hostile mobs from being removed by the relative lag removal system. THIS HAS TO BE DISABLED TO USE doOnlyItemsForRelative
 dontDoFriendlyMobsForRelative: true
 
-# When the LaggRemover AI detects a player is lagging. It will attempt to remove lag relative to player before looking at the whole server.
-# This defines the max radius in blocks the LaggRemover AI can remove entities specified above. Radius in blocks.
+# When the HBZCleaner AI detects a player is lagging. It will attempt to remove lag relative to player before looking at the whole server.
+# This defines the max radius in blocks the HBZCleaner AI can remove entities specified above. Radius in blocks.
 localLagRadius: 10
 
 # Defines what percent of the entities in the "localLagRadius" are removed.
 localThinPercent: 80
 
-# How often the LaggRemover AI can remove lag for a person (in seconds). This is to prevent players from tricking the AI into repeatedly clearing mobs or purging memory.
+# How often the HBZCleaner AI can remove lag for a person (in seconds). This is to prevent players from tricking the AI into repeatedly clearing mobs or purging memory.
 localLagRemovalCooldown: 60
 
 # Makes local lag removal only be triggered if the amount of entities in the 'localLagRadius' is greater than this
 localLagTriggered: 100
 
-# Time between messages a player can type in chat. If a player spams chat this can create lag. (in ticks 20 ticks = 1 second) If a player has the permission lr.nochatdelay, they will not have their chat limited.
+# Time between messages a player can type in chat. If a player spams chat this can create lag. (in ticks 20 ticks = 1 second) If a player has the permission hbzcleaner.nochatdelay, they will not have their chat limited.
 chatDelay: 0
-
-# Change this to modify the HBZCleaner prefix. NOTE: The showing of the prefix shows professionalism for the technology being used by your server, if you modify it from its default value, it does not.
-prefix: "&6&lHBZCleaner &7&l>>&r "
-
-# This is whether you would like this plugin to automatically check and install new updates. This is highly recommended.
-auto-update: true
-
-# The warning messages and how long you would like a warning to be for a certain protocol.
-protocol_warnings:
-  cc_items:
-    time: 60
-    stages:
-      - "60:%PREFIX%&eClearing ground items in &b60 &eseconds"
-      - "30:%PREFIX%&eClearing ground items in &b30 &eseconds"
-      - "5:%PREFIX%&eClearing ground items in &b5 &eseconds"
-      - "f:%PREFIX%&eAll items on the ground have been cleared."
-  cc_entities:
-    time: 60
-    stages:
-      - "60:%PREFIX%&eClearing hostile entities in &b60 &eseconds"
-      - "30:%PREFIX%&eClearing hostile entities in &b30 &eseconds"
-      - "5:%PREFIX%&eClearing hostile entities in &b5 &eseconds"
-      - "f:%PREFIX%&eAll hostile entities have been cleared."
-
-# Enables/Disables the "LaggRemover V2" splash screen when the plugin starts
-splashScreen: true
