--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ java {
 }
 
 group = 'com.seristic'
-version = '0.2-hbz-folia'
+version = '0.3-folia'
+archivesBaseName = 'HBZCleaner'
 
 repositories {
     mavenCentral()
