refactor: complete LagX rebrand (prefix, messages, help, docs); rename artifact to LagX; keep API/permissions

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ java {
 
 group = 'com.seristic'
 version = '0.6-folia'
-archivesBaseName = 'HBZCleaner'
+archivesBaseName = 'LagX'
 
 repositories {
     mavenCentral()
