--- a/bin/main/plugin.yml
+++ b/bin/main/plugin.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: \$schema=https://json.schemastore.org/bukkit-plugin.json
+
 name: LagX
 version: "${version}"
 main: com.seristic.lagx.main.LagX
