Refactor: Complete rebrand from HBZCleaner to LagX with modular architecture

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,7 @@ run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+
+.VSCodeCounter/
+LAGX_REFACTORING_SUMMARY.md
